# glassfiber_routing

./: .gitignore  LICENSE  README.md  astar.py  densitytests.sh  gen_densitytests.sh  gen_instance.py  ilp.py  plot_solution.py  pyproject.toml
algo_tester/: Cargo.toml
algo_tester/src/: main.rs
astar_rust/: Cargo.toml
astar_rust/src/: cabling.rs  main.rs
astar_rust/src/cabling/: astar.rs  base.rs
final_val/: analysis_dynamic_524.ipynb  analysis_dynamic_625.ipynb  analysis_hybrid_524.ipynb  analysis_hybrid_625.ipynb  analysis_static_524.ipynb  analysis_static_625.ipynb  densityanalysis.ipynb
