[project]
name = "forschungsproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorspacious>=1.1.2",
    "gurobipy>=12.0.2",
    "matplotlib>=3.10.3",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "polars>=1.30.0",
    "pydantic>=2.12.3",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]
