[package]
name = "algo_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
itertools = "0.14.0"
regex = "1.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.145", features = ["derive"]}
indicatif = { version = "0.18.3", features = ["rayon"]}
rayon = "1.11.0"
glob = "0.3.3"
